[gd_scene load_steps=9 format=3 uid="uid://dggbojsjn8b68"]

[ext_resource type="Script" path="res://menu.gd" id="1_tjbnw"]
[ext_resource type="Texture2D" uid="uid://b1hlvlvcq348m" path="res://sprites/menu/OIP.jpg" id="1_ukuow"]
[ext_resource type="Texture2D" uid="uid://cslb86ncghl37" path="res://sprites/menu/Window.png" id="2_0jmat"]
[ext_resource type="Texture2D" uid="uid://p871xn15jlco" path="res://sprites/menu/Start_BTN.png" id="3_ahda5"]
[ext_resource type="Texture2D" uid="uid://cey2mfstl7exa" path="res://sprites/menu/Exit_BTN.png" id="4_1krx1"]
[ext_resource type="AudioStream" uid="uid://crhlxjm4uqlvw" path="res://sonidos/doorOpen_000.ogg" id="5_7fitn"]
[ext_resource type="Texture2D" uid="uid://cn1tg5qajk6k2" path="res://sprites/menu/Replay_BTN.png" id="6_7ip23"]
[ext_resource type="AudioStream" uid="uid://cax2u33n3iql0" path="res://sonidos/doorClose_002.ogg" id="7_qw0nj"]

[node name="menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_tjbnw")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -32.0
offset_top = -7.0
offset_right = 1188.0
offset_bottom = 705.0
texture = ExtResource("1_ukuow")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -246.0
offset_right = 187.5
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0jmat")
expand_mode = 1

[node name="Play" type="TextureButton" parent="TextureRect/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -60.0
offset_right = 330.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_ahda5")

[node name="Audioplay" type="AudioStreamPlayer" parent="TextureRect/TextureRect2/Play"]
stream = ExtResource("5_7fitn")

[node name="Exit" type="TextureButton" parent="TextureRect/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 28.0
offset_right = 325.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_1krx1")

[node name="AudioExit" type="AudioStreamPlayer" parent="TextureRect/TextureRect2/Exit"]
stream = ExtResource("7_qw0nj")

[node name="Play_again" type="TextureButton" parent="TextureRect/TextureRect2"]
layout_mode = 0
offset_left = 165.5
offset_top = 121.0
offset_right = 375.5
offset_bottom = 331.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("6_7ip23")
stretch_mode = 0

[connection signal="pressed" from="TextureRect/TextureRect2/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/Play_again" to="." method="_on_play_again_pressed"]
